<resources>
    <string name="app_name">Internshipper</string>
    <string name="welcome_text">Welcome!</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="forgot_password_text">Forgot password?</string>
    <string name="signin_text">Sign in</string>
    <string name="complete">Complete</string>
    <string name="error">Error</string>
    <string name="no_account_text">Don\'t have an account yet?</string>
    <string name="signup_text">Sign up</string>
    <string name="create_acc_text">Create new\naccount</string>
    <string name="first_name_text">First name</string>
    <string name="last_name_text">Last name</string>
    <string name="email_text">Email</string>
    <string name="password_repeat_text">Repeat password</string>
    <string name="have_account_text">Already have an account?</string>
</resources>