<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/tv_create_acc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_acc_text"
            android:textAlignment="center"
            android:textSize="25sp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/et_first_name"
            android:background="@drawable/edittext_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name_text"
            android:textColor="@color/black"
            android:textColorHint="@color/iron"/>

        <EditText
            android:id="@+id/et_last_name"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittext_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name_text"
            android:textColor="@color/black"
            android:textColorHint="@color/iron"/>


        <EditText
            android:id="@+id/et_email"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittext_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_text"
            android:textColorHint="@color/iron"
            android:textColor="@color/black"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_password"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittext_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_text"
            android:textColorHint="@color/iron"
            android:textColor="@color/black"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittext_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_repeat_text"
            android:textColorHint="@color/iron"
            android:textColor="@color/black"
            android:inputType="textPassword" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="5dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="Are you an employer?" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true" />

        </RelativeLayout>

        <com.dd.CircularProgressButton
            android:id="@+id/btn_signup"
            android:layout_width="166dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cpb_textComplete="@string/complete"
            app:cpb_textError="@string/error"
            app:cpb_textIdle="@string/signup_text"
            app:cpb_cornerRadius="48dp"/>

        <TextView
            android:id="@+id/tv_already_has_account_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/have_account_text"
            android:textColor="@color/iron"/>

        <TextView
            android:id="@+id/tv_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/signin_text"
            android:textColor="#696969"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>