<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        layout="@layout/bottom_navigation" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_pic_settings"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/user_icon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                app:civ_border_width="2dp"
                app:civ_border_color="#000000"/>

            <ImageButton
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_save_icon"
                android:background="@null"
                android:scaleType="fitCenter"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="10dp"
                android:layout_alignParentRight="true" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingTop="25dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:gravity="start|center_vertical"
                    android:text="@string/first_name_text"
                    android:textAlignment="textStart"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" />

                <EditText
                    android:id="@+id/et_user_firstname"
                    android:layout_width="180dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginRight="8dp" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:gravity="start|center_vertical"
                    android:textAlignment="textStart"
                    android:text="@string/last_name_text"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" />

                <EditText
                    android:id="@+id/et_user_lastname"
                    android:layout_width="180dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginRight="8dp" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:gravity="start"
                    android:text="Description"
                    android:textAlignment="textStart"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" />

                <EditText
                    android:id="@+id/et_user_description"
                    android:layout_width="180dp"
                    android:layout_height="70dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginRight="8dp" />

            </android.support.constraint.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Private information"
                android:textStyle="bold"
                />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:gravity="start|center_vertical"
                    android:textAlignment="textStart"
                    android:text="@string/email_text"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" />

                <EditText
                    android:id="@+id/et_user_email"
                    android:layout_width="180dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginRight="8dp" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:gravity="start|center_vertical"
                    android:textAlignment="textStart"
                    android:text="Phone"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" />

                <EditText
                    android:id="@+id/et_user_phone"
                    android:layout_width="180dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginRight="8dp" />

            </android.support.constraint.ConstraintLayout>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>